--- a/ranger/history
+++ b/ranger/history
@@ -1,5 +1,3 @@
-open_with ipython -i /home/dmalt/Code/python/CLI/open_raw.py
-rename 003_MRI_data
 open_with h
 open_with
 open_with q
@@ -37,7 +35,6 @@ bulkrename
 rename Harmonic_series_to_32_hor.png
 
 cd ~/Downloads
-delete
 shell 
 search .con
 search .nvim
@@ -48,3 +45,6 @@ search loc
 search vim
 open_with vim
 q
+search term
+search share
+delete
